add collection for messages and change addNewMessage to create a message in the Messaages collection and also append.

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
   <body>
       <ul id="messages"></ul>
       <form action="">
-        <input id="m" autocomplete="off" /><button id="add-new-message">Send</button>
+        <input id="add-new-message" autocomplete="off" placeholder="Type a Message" />
       </form>
 <script src="/views.js"></script>
   </body>
